Added content and css

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,16 @@
     <title>Digvijay Srivastava</title>
   </head>
   <body>
+    <div class="container">
+      <div class="content">
+        <h1>Digvijay<br />Srivastava</h1>
+        <p>
+          Hola! I am a Computer Science Engineering<br />
+          undergraduate student who loves<br />
+          making games and playing them.
+        </p>
+      </div>
+    </div>
     <canvas class="webgl"></canvas>
   </body>
 </html>
